Add @sjaeckel to the authors list
Thanks for the patch

--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 About
 -----
 
@@ -38,6 +37,7 @@ Authors
 Jamie Wilkinson <http://jamiedubs.com>
 Theo Watson <http://muonics.net>
 Greg Leuch <http://gleuch.com>
+Steffen Jaeckel <https://github.com/sjaeckel>
 
 A FFFFFAT Lab Production
 http://fffff.at
